force-app/main/default/objects/FeeSchedules__c/FeeSchedules__c.object-meta.xml
<CustomObject>
    <label>Fee Schedule</label>
    <nameField>
        <label>Fee Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>