force-app/main/default/objects/FeeSchedules__c/fields/Chr__c.field-meta.xml
<CustomField>
    <fullName>Chr__c</fullName>
    <inlineHelpText>Please key in the % applicable on the charges to calculate the Fee Schedule.</inlineHelpText>
    <label>Charges %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>