force-app/main/default/objects/FeeSchedules__c/fields/Chron__c.field-meta.xml
<CustomField>
    <fullName>Chron__c</fullName>
    <inlineHelpText>Please select the charges on  (Investment, Profit) applicable for the fee schedule.</inlineHelpText>
    <label>Charges on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>