force-app/main/default/objects/FeeSchedules__c/fields/Crhb__c.field-meta.xml
<CustomField>
    <fullName>Crhb__c</fullName>
    <label>Charges on H</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>