force-app/main/default/objects/FeeSchedules__c/fields/Dur__c.field-meta.xml
<CustomField>
    <fullName>Dur__c</fullName>
    <inlineHelpText>Please select the duration applicable.</inlineHelpText>
    <label>Duration of Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>SemiAnually</fullName>
                <label>Semi Annually</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>