force-app/main/default/objects/FeeSchedules__c/fields/DurHy__c.field-meta.xml
<CustomField>
    <fullName>DurHy__c</fullName>
    <label>Duration of Basis H</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>SemiAnnually</fullName>
                <label>Semi Annually</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>SemiAnually</fullName>
                <isActive>false</isActive>
                <label>SemiAnually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>