force-app/main/default/objects/FeeSchedules__c/fields/Fe__c.field-meta.xml
<CustomField>
    <fullName>Fe__c</fullName>
    <inlineHelpText>This field gets auto-populated upon save against the Fee we have selected.</inlineHelpText>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Fee Schedules</relationshipLabel>
    <relationshipName>FeeSchedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>