force-app/main/default/objects/FeeSchedules__c/fields/Ffee__c.field-meta.xml
<CustomField>
    <fullName>Ffee__c</fullName>
    <inlineHelpText>Please key in the Fixed fee amount applicable for the fee schedule.</inlineHelpText>
    <label>Fixed Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>