force-app/main/default/objects/FeeSchedules__c/fields/FTy__c.field-meta.xml
<CustomField>
    <fullName>FTy__c</fullName>
    <inlineHelpText>Please select the fee type against the fee.</inlineHelpText>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FixedAmount</fullName>
                <label>Fixed Amount</label>
            </value>
            <value>
                <fullName>FixedPerTime</fullName>
                <label>Fixed per time</label>
            </value>
            <value>
                <fullName>ManagementFee</fullName>
                <label>Management fee</label>
            </value>
            <value>
                <fullName>ProfitShare</fullName>
                <label>Profit share</label>
            </value>
            <value>
                <fullName>StaggeredTimePeriod</fullName>
                <label>Staggered time period</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>