force-app/main/default/objects/FeeSchedules__c/fields/FTyHd__c.field-meta.xml
<CustomField>
    <fullName>FTyHd__c</fullName>
    <formula>TEXT( Fe__r.Ty__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Type Hybrid</label>
    <type>Text</type>
</CustomField>