force-app/main/default/objects/FeeSchedules__c/fields/FTyHy__c.field-meta.xml
<CustomField>
    <fullName>FTyHy__c</fullName>
    <label>Fee Type H</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FixedAmount</fullName>
                <label>Fixed Amount</label>
            </value>
            <value>
                <fullName>ManagementFee</fullName>
                <label>Management Fee</label>
            </value>
            <value>
                <fullName>ProfitShare</fullName>
                <label>Profit Share</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>