force-app/main/default/objects/FeeSchedules__c/fields/SAmt__c.field-meta.xml
<CustomField>
    <fullName>SAmt__c</fullName>
    <label>Staggered Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>