force-app/main/default/objects/FeeSchedules__c/fields/TMul__c.field-meta.xml
<CustomField>
    <fullName>TMul__c</fullName>
    <inlineHelpText>Please key in the threshold multiplier, if applicable.</inlineHelpText>
    <label>Threshold Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>