force-app/main/default/objects/FeeSchedules__c/fields/TPShare__c.field-meta.xml
<CustomField>
    <fullName>TPShare__c</fullName>
    <inlineHelpText>Please key in the threshold profit share %, if applicable.</inlineHelpText>
    <label>Threshold Profit Share %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>