force-app/main/default/objects/FeeSchedules__c/recordTypes/Fixed_amount.recordType-meta.xml
<RecordType>
    <fullName>Fixed_amount</fullName>
    <active>true</active>
    <label>Fixed amount</label>
</RecordType>