force-app/main/default/objects/FeeSchedules__c/recordTypes/FixedPerTime.recordType-meta.xml
<RecordType>
    <fullName>FixedPerTime</fullName>
    <active>true</active>
    <label>Fixed Per Time</label>
</RecordType>