force-app/main/default/objects/FeeSchedules__c/recordTypes/ManagementFee.recordType-meta.xml
<RecordType>
    <fullName>ManagementFee</fullName>
    <active>true</active>
    <label>Management Fee</label>
</RecordType>