force-app/main/default/objects/FeeSchedules__c/recordTypes/ProfitShare.recordType-meta.xml
<RecordType>
    <fullName>ProfitShare</fullName>
    <active>true</active>
    <label>Profit Share</label>
</RecordType>