force-app/main/default/objects/FeeSchedules__c/recordTypes/Staggered.recordType-meta.xml
<RecordType>
    <fullName>Staggered</fullName>
    <active>true</active>
    <label>Staggered</label>
</RecordType>